Add local PreDb sync and storage
