# src/pmm.Api/Features/Prdb/Sync/PrdbApiModels.cs
@@ -110,9 +110,9 @@ record PrdbApiVideoDetailImage(Guid Id, string? CdnPath);
 
 record PrdbApiVideoDetailPreName(Guid Id, string Title);
 
-record PrdbApiLatestPreNameSite(Guid Id, string Title);
-record PrdbApiLatestPreNameVideo(Guid Id, string Title, DateOnly? ReleaseDate, PrdbApiLatestPreNameSite Site);
-record PrdbApiLatestPreNameItem(Guid Id, string Title, DateTime CreatedAtUtc, PrdbApiLatestPreNameVideo Video);
+record PrdbApiLatestPreDbSite(Guid Id, string Title);
+record PrdbApiLatestPreDbVideo(Guid Id, string Title, DateOnly? ReleaseDate, PrdbApiLatestPreDbSite Site);
+record PrdbApiLatestPreDbItem(Guid Id, string Title, DateTime CreatedAtUtc, PrdbApiLatestPreDbVideo? Video);
 
 record PrdbApiVideoDetailActor(
     Guid Id,
